--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
   "dependencies": {
+    "@prisma/client": "^6.3.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
-  }
+    "express": "^4.21.2",
+    "prisma": "^6.3.0"
+  },
+  "description": ""
 }
